Visibility hidden to prevent FOUC

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,6 @@
 select {
 	width:100%;
+	visibility: hidden;
 }
 
 .pokemon{
